Update ionic creator pages

--- a/hackathon/www/templates/findACleanup.html
+++ b/hackathon/www/templates/findACleanup.html
@@ -1,3 +1,6 @@
 <ion-view title="Find A Cleanup!" id="page2">
-  <ion-content padding="true" style="background: url(img/Cvkpbt6qQ8aOXaopko96_Search20page.png) no-repeat center;background-size:cover;" class="has-header"></ion-content>
+  <ion-content padding="true" style="background: url(img/Cvkpbt6qQ8aOXaopko96_Search20page.png) no-repeat center;background-size:cover;" class="has-header">
+    <div class="spacer" style="width: 300px; height: 255px;"></div>
+    <a ui-sref="tabsController.confirmation" id="findACleanup-button4" class="button button-positive  button-block button-clear"></a>
+  </ion-content>
 </ion-view>
